--- a/fasores.html
+++ b/fasores.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>José Roberto Pinto da Silva, Ph.D.</title>
-        <link href="./circulo.css" rel="stylesheet"/>
+        <link href="./fasores.css" rel="stylesheet"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <link rel="icon" href="./logo.jpeg">
     </head>
