--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
           <li>Operação de Usinas Hidroelétricas da Copel Geração</li>
           <li>Gerente de Pesquisa e Desenvolvimento</li>
           <li>Participação e elaboração do Projeto de Transmissão de Energia Elétrica - Energia Renovável</li>
+          <li><a href="./fasores.html" target="_blank">Visualização de Fasores</a></li>
         </ul>
     </section>
 
