--- a/fun.html
+++ b/fun.html
@@ -2,6 +2,9 @@
 <html>
 
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>José Roberto Pinto da Silva, Ph.D.</title>
     <link href="./fun.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
