--- a/subjects.html
+++ b/subjects.html
@@ -2,6 +2,9 @@
 <html>
 
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>José Roberto Pinto da Silva, Ph.D.</title>
     <link href="./table.css" rel="stylesheet"/>
     <link rel="icon" href="./logo.jpeg">
