--- a/english_page.html
+++ b/english_page.html
@@ -66,15 +66,15 @@
       <h3>Universities and Degrees:</h3>
           <article>
           <ul>
-            <li><a href="https://www.ufpr.br/portalufpr/" target="_blank"><img src="./ufpr.png" height=130 width=130/></a><br>
+            <li class="bot"><a href="https://www.ufpr.br/portalufpr/" target="_blank"><img src="./ufpr.png" height=130 width=130/></a><br>
             <p>Bachelor in Electrical Engineering</p></li>
 
 
-            <li><a href="https://ufsc.br/" target="_blank"><img src="./ufsc.png" heigh=130 width=130/></a><br>
+            <li class="bot"><a href="https://ufsc.br/" target="_blank"><img src="./ufsc.png" heigh=130 width=130/></a><br>
             <p>Master in Electrical Engineering</p></li>
 
 
-            <li><a href="https://unifei.edu.br/" target="_blank"><img src="./EFEI.png" heigh=130 width=130/></a>
+            <li class="bot"><a href="https://unifei.edu.br/" target="_blank"><img src="./EFEI.png" heigh=130 width=130/></a>
             <p>Doctorate in Electrical Engineering</p></li>
 
             <li><a href="https://pos.fae.edu/curitiba" target="_blank"><img src="./fae.png" height=130 width=130/></a>
