--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul>
         <li><a href="#quem">Quem Sou Eu</a></li>
         <li><a href="#estudo">Qualificações</a></li>
-        <li><a href="#trabalhos">Onde Trabalhei</a></li>
+        <li><a href="#trabalhos">Onde Trabalhei</a></li><br>
         <li><a href="#projetos">Trabalhos Importantes</a></li>
         <li><a href="#atividades">Atividades Presente</a></li>
         <li><a href="#contato">Contato</a></li>
@@ -73,15 +73,15 @@
       <h3>Durante minha carreira profissional, eu conquistei diversos títulos e prêmios. Minhas qualificações através de estudo são:</h3>
           <article>
           <ul>
-            <li><a href="https://www.ufpr.br/portalufpr/" target="_blank"><img src="./ufpr.png" height=130 width=130/></a><br>
+            <li class="bot"><a href="https://www.ufpr.br/portalufpr/" target="_blank"><img src="./ufpr.png" height=130 width=130/></a><br>
             <p>Bacharelado em Engenharia Elétrica</p></li>
 
 
-            <li><a href="https://ufsc.br/" target="_blank"><img src="./ufsc.png" height=130 width=130/></a><br>
+            <li class="bot"><a href="https://ufsc.br/" target="_blank"><img src="./ufsc.png" height=130 width=130/></a><br>
             <p>Mestrado em Engenharia Elétrica</p></li>
 
 
-            <li><a href="https://unifei.edu.br/" target="_blank"><img src="./EFEI.png" height=130 width=130/></a>
+            <li  class="bot"><a href="https://unifei.edu.br/" target="_blank"><img src="./EFEI.png" height=130 width=130/></a>
             <p>Doutorado em Engenharia Elétrica</p></li>
 
             <li><a href="https://pos.fae.edu/curitiba" target="_blank"><img src="./fae.png" height=130 width=130/></a>
