--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul>
         <li><a href="#quem">Quem Sou Eu</a></li>
         <li><a href="#estudo">Qualificações</a></li>
-        <li><a href="#trabalhos">Onde Trabalhei</a></li><br>
+        <li><a href="#trabalhos">Onde Trabalhei</a></li>
         <li><a href="#projetos">Trabalhos Importantes</a></li>
         <li><a href="#atividades">Atividades Presente</a></li>
         <li><a href="#contato">Contato</a></li>
