--- a/english_page.html
+++ b/english_page.html
@@ -155,7 +155,7 @@
           </div>
 
           <div class="meio">
-            <a href="https://www.linkedin.com/in/jose-roberto-pinto-da-silva-a64006112/" target="_blank"><i class="fa fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/jos%C3%A9-roberto-pinto-da-silva-a64006112/" target="_blank"><i class="fa fa-linkedin"></i></a>
           </div>
 
           <div class="meio">
