--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <section id="estudo">
     <h2>Qualificações</h2>
-      <h3>Durante minha carreira profissional, eu conquistei diversos títulos e prêmios. Minhas qualificações através de estudo são:</h3>
+    <h3>Universidades:</h3>
           <article>
           <ul>
             <li class="bot"><a href="https://www.ufpr.br/portalufpr/" target="_blank"><img src="./ufpr.png" height=130 width=130/></a><br>
@@ -163,7 +163,7 @@
           </div>
 
           <div class="meio">
-            <a href="https://www.linkedin.com/in/jose-roberto-pinto-da-silva-a64006112/" target="_blank"><i class="fa fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/jos%C3%A9-roberto-pinto-da-silva-a64006112/" target="_blank"><i class="fa fa-linkedin"></i></a>
           </div>
 
           <div class="meio">
