--- a/manual.html
+++ b/manual.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manual Presente de Natal</title>
+    <title>Manual</title>
     <link href="./manual.css" rel="stylesheet">
 </head>
 <body>
